# multinear-tmp

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
multinear/: cli.py  main.py
multinear/api/: main.py  router.py  run.py  schemas.py  storage.py
multinear/cli/: main.py  utils.py
multinear/cli/commands/: details.py  init.py  recent.py  run.py  web.py
multinear/engine/: checklist.py  evaluate.py  run.py  storage.py
multinear/frontend/: package-lock.json  package.json
multinear/frontend/src/: app.html
multinear/frontend/src/lib/api/: index.ts
multinear/frontend/src/lib/components/: JobStatus.svelte  NavLink.svelte  RunsWithFilters.svelte  StatusFilter.svelte
multinear/frontend/src/lib/stores/: projects.ts
multinear/frontend/src/lib/utils/: tasks.ts
multinear/frontend/src/routes/: +layout.svelte  +page.svelte
multinear/frontend/src/routes/[project_id]/: +page.svelte
multinear/frontend/src/routes/compare/: +page.svelte
multinear/frontend/src/routes/dashboard/: +page.svelte
multinear/frontend/src/routes/experiments/: +page.svelte
multinear/frontend/src/routes/run/: +page.svelte
multinear/templates/: config.yaml
multinear/utils/: capture.py
