[project]
name = "multinear"
version = "0.1"
description = "Multinear platform"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
multinear = "multinear.cli:main"
